--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -1,8 +1,21 @@
+@import 'base/_variables';
+
 *{
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
+	font-weight: bold;
 }
 
 img {
 	width: 100%;
+}
+
+html {
+	scroll-behavior: smooth;
+}
+
+body {
+	font-family: $font-family !important;
+	position: relative;
 }
