--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -1,3 +1,9 @@
+$font-family: 'Srisakdi', cursive;
+$primary: #BCE1FB;
+$secondary: rgb(166, 228, 231);
+$black: #000;
+$white: #fff;
+
 // media queries
 $small-devices: 600px; //max width
 $tablets: 601px; // min width
