--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -3,6 +3,7 @@ $primary: #BCE1FB;
 $secondary: rgb(166, 228, 231);
 $black: #000;
 $white: #fff;
+$primary: #0095ff;
 
 // media queries
 $small-devices: 600px; //max width
