--- a/assets/scss/layout/_theme.scss
+++ b/assets/scss/layout/_theme.scss
@@ -1,7 +1,7 @@
 $theme-colors: (
   "info": #7eff4b,
   "danger": #ff50f0,
-  "primary": rgb(123, 200, 255),
+  "primary": #0095ff,
   "secondary": rgb(84, 211, 218)
 );
 
