--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7036,6 +7036,30 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6; } }
 
+#features .title-div, #services .title-div {
+  position: relative; }
+  #features .title-div .title, #services .title-div .title {
+    text-align: center;
+    margin-bottom: 40px;
+    font-weight: bold; }
+    #features .title-div .title::after, #services .title-div .title::after {
+      width: 250px;
+      height: 5px;
+      content: "";
+      position: absolute;
+      top: 50px;
+      left: 0;
+      right: 0;
+      z-index: 0;
+      margin: auto;
+      background: -webkit-radial-gradient(50% 50%, ellipse closest-side, #0095ff, rgba(255, 42, 112, 0) 60%); }
+  #features .title-div p, #services .title-div p {
+    text-align: center;
+    font-size: 24px; }
+    @media only screen and (max-width: 768px) {
+      #features .title-div p, #services .title-div p {
+        font-size: 20px !important; } }
+
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
@@ -14070,9 +14094,6 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6; } }
 
-.effect {
-  background-color: #fff !important; }
-
 .icons {
   position: fixed;
   display: inline-block;
@@ -14082,24 +14103,15 @@ a.text-dark:hover, a.text-dark:focus {
     margin-bottom: 10px;
     font-size: 20px; }
 
-.title {
-  text-align: center;
-  margin-bottom: 40px;
-  font-weight: bold; }
-  .title::after {
-    width: 250px;
-    height: 5px;
-    content: "";
-    position: absolute;
-    top: 50px;
-    left: 0;
-    right: 0;
-    z-index: 0;
-    margin: auto;
-    background: -webkit-radial-gradient(50% 50%, ellipse closest-side, #0095ff, rgba(255, 42, 112, 0) 60%); }
+button {
+  font-weight: bold !important;
+  color: #0095ff;
+  padding: 6px 15px; }
 
 header .bg-transparent {
-  background-color: transparent !important; }
+  background-color: transparent !important;
+  position: absolute;
+  width: 100%; }
   header .bg-transparent .logo img {
     width: 70%; }
   header .bg-transparent .menu ul li {
@@ -14128,34 +14140,74 @@ header .bg-transparent {
     @media only screen and (max-width: 600px) {
       .banner-section .text h5 {
         padding: 10px 0 !important; } }
-  .banner-section .text button {
-    font-weight: bold;
-    color: #000;
-    padding: 6px 15px; }
   .banner-section .image img {
     width: 100%; }
 
-<<<<<<< HEAD
 #features {
   padding: 100px 0; }
   @media only screen and (max-width: 768px) {
     #features {
       padding: 50px 0 !important; } }
-  #features .title-div p {
-    text-align: center;
-    font-size: 18px; }
-  #features .row-2 {
-    margin-top: 70px; }
-=======
-.effect {
-  background-color: #fff !important; }
+  #features .row-1 {
+    margin: 50px 0 100px; }
+    @media only screen and (max-width: 768px) {
+      #features .row-1 {
+        margin: 50px 0 !important; } }
+  @media only screen and (max-width: 768px) {
+    #features .row-1 .text, #features .row-2 .text {
+      text-align: center !important;
+      padding: 10px 0 !important; } }
+  #features .row-1 .text span, #features .row-2 .text span {
+    font-weight: bold;
+    font-size: 40px; }
+  #features .row-1 .text h2, #features .row-2 .text h2 {
+    font-weight: bold;
+    font-size: 3vw; }
+    @media only screen and (max-width: 768px) {
+      #features .row-1 .text h2, #features .row-2 .text h2 {
+        font-size: 4vw !important; } }
+    @media only screen and (max-width: 600px) {
+      #features .row-1 .text h2, #features .row-2 .text h2 {
+        font-size: 7vw !important; } }
 
-.icons {
-  display: inline-block;
-  position: fixed;
-  top: 270px;
-  left: 50px; }
-  .icons svg {
-    font-size: 20px;
-    margin: 5px 0; }
->>>>>>> efd6f91fc14e7df0a01684db9197c743b06f8310
+#services .wrapper {
+  box-shadow: 8px 10px 30px -10px rgba(0, 0, 0, 0.1);
+  margin: 15px 0;
+  padding: 40px 35px;
+  transition: all 0.7s ease; }
+  @media (prefers-reduced-motion: reduce) {
+    #services .wrapper {
+      transition: none; } }
+  #services .wrapper:hover {
+    transition: all 0.7s ease;
+    background: #f2f2f2;
+    transform: scale(0.9); }
+    @media (prefers-reduced-motion: reduce) {
+      #services .wrapper:hover {
+        transition: none; } }
+    #services .wrapper:hover .icon::after {
+      top: 26px;
+      left: 40px;
+      transition: all 0.5s linear; }
+      @media (prefers-reduced-motion: reduce) {
+        #services .wrapper:hover .icon::after {
+          transition: none; } }
+  #services .wrapper h3 {
+    font-weight: bold;
+    margin: 20px 0; }
+  #services .wrapper .icon::after {
+    content: '';
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: -webkit-gradient(linear, left top, right top, from(transparent), to(#0095ff));
+    background: linear-gradient(to right, transparent, #0095ff);
+    position: absolute;
+    top: 44px;
+    left: 55px;
+    transition: all 0.5s linear; }
+    @media (prefers-reduced-motion: reduce) {
+      #services .wrapper .icon::after {
+        transition: none; } }
+  #services .wrapper .icon svg {
+    font-size: 25px; }
