--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14120,6 +14120,9 @@ header .bg-transparent {
       font-size: 18px;
       color: #000 !important;
       font-weight: bold !important; }
+  header .bg-transparent .navbar-collapse {
+    background-color: #bddffb;
+    z-index: 999; }
 
 .banner-section {
   background: url(../../assets/images/bg.jpg);
@@ -14142,6 +14145,10 @@ header .bg-transparent {
         padding: 10px 0 !important; } }
   .banner-section .image img {
     width: 100%; }
+    @media only screen and (max-width: 768px) {
+      .banner-section .image img {
+        width: 50% !important;
+        margin: 25px 0 !important; } }
 
 #features {
   padding: 100px 0; }
