--- a/assets/scss/layout/_theme.scss
+++ b/assets/scss/layout/_theme.scss
@@ -2,7 +2,7 @@ $theme-colors: (
   "info": #7eff4b,
   "danger": #ff50f0,
   "primary": #0095ff,
-  "secondary": rgb(84, 211, 218)
+  "secondary": #28a745
 );
 
 $body-color: #192534;
